--- a/frontpage/templates/frontpage/home.html
+++ b/frontpage/templates/frontpage/home.html
@@ -5,6 +5,15 @@
 
 {% block content%}
 
+    <div class="intro" style="height: 100vh;">
+        <div id="introUpperSpace"></div>
+        <div class=" row justify-content-center">
+            <h1 id="myName" class="display-1">Maximiliano Torres</h1>
+        </div>
+        <div class="row justify-content-center">
+            <h2 id="myDesc">Software Developer</h2>
+        </div>
+    </div>
 
 <h1>Hola</h1>
 
