--- a/frontpage/templates/frontpage/base.html
+++ b/frontpage/templates/frontpage/base.html
@@ -1,11 +1,11 @@
- {% load i18n %}
+{% load i18n %}
 {% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <title>Maximiliano Torres Developer</title>
+    <title>{% trans "Maximiliano Torres Developer" %}</title>
 
     <!-- Metadata -->
     <meta charset="UTF-8">
@@ -30,7 +30,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-        <a class="navbar-brand" href="#">Torres</a>
+        <a class="navbar-brand" href="#">{% trans "Torres" %}</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
             aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -39,16 +39,23 @@
         <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#about">Projects</a>
+                    <a class="nav-link" href="#about">{% trans "Projects" %}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact">Posts</a>
+                    <a class="nav-link" href="#contact">{% trans "Posts" %}</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#about">Language</a>
-                </li>
+                <li class="nav-item dropdown pr-3">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                        {% trans "Language" %}
+                    </a>
+                    <div class="dropdown-menu">
+                        {% for language in languages %}
+                            <a class="dropdown-item" href="/{{language.code}}/">{{language.name}}</a>
+                        {% endfor %}
+                    </div>
+                  </li>
             </ul>
         </div>
     </nav>
