more languages and pic

--- a/frontpage/templates/frontpage/base.html
+++ b/frontpage/templates/frontpage/base.html
@@ -48,7 +48,7 @@
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item dropdown pr-3">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                        {% trans "Language" %}
+                        {% trans "Language" %} 🌐
                     </a>
                     <div class="dropdown-menu">
                         {% for language in languages %}
