--- a/frontpage/templates/frontpage/home.html
+++ b/frontpage/templates/frontpage/home.html
@@ -26,7 +26,7 @@
                 <!-- Picture -->
             {% if frontpage.picture %}
                 <div class="col-sm">
-                    <img src="{{frontpage.picture}}" style="max-width: 100%;"
+                    <img src="/media/{{ frontpage.picture }}" style="max-width: 100%;"
                         class="rounded img-thumbnail float-right">
                 </div>
             {% endif %}
