--- a/frontpage/templates/frontpage/home.html
+++ b/frontpage/templates/frontpage/home.html
@@ -16,7 +16,7 @@
     </div>
 
     <!--Bio-->
-    <div id="bio" class="p-5">
+    <div class="bio p-5">
         <div class="row justify-content-center">
             <a name="about">
                 <h1 class="display-3 ">{% trans "About me" %}</h1>
