--- a/frontpage/templates/frontpage/base.html
+++ b/frontpage/templates/frontpage/base.html
@@ -38,25 +38,31 @@
 
         <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/{{current_language}}/projects/">{% trans "Projects" %}</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/{{current_language}}/articles/">{% trans "Posts" %}</a>
-                </li>
+                {% if projects %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/{{current_language}}/projects/">{% trans "Projects" %}</a>
+                    </li>
+                {% endif %}
+                {% if articles %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/{{current_language}}/articles/">{% trans "Posts" %}</a>
+                    </li>
+                {% endif %}
             </ul>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item dropdown pr-3">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                        {% trans "Language" %} 🌐
-                    </a>
-                    <div class="dropdown-menu">
-                        {% for language in languages %}
-                            <a class="dropdown-item" href="/{{language.code}}/">{{language.name}}</a>
-                        {% endfor %}
-                    </div>
-                  </li>
-            </ul>
+            {% if languages %}
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item dropdown pr-3">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+                            {% trans "Language" %} 🌐
+                        </a>
+                        <div class="dropdown-menu">
+                            {% for language in languages %}
+                                <a class="dropdown-item" href="/{{language.code}}/">{{language.name}}</a>
+                            {% endfor %}
+                        </div>
+                    </li>
+                </ul>
+            {% endif %}
         </div>
     </nav>
 
